--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import './src/styles/global.css';
 ---
 
 <Layout>
-	<div class="flex justify-center">
+	<div class="flex justify-center bg-white">
 		<Video />
 	</div>
 </Layout>
