--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -11,7 +11,7 @@ onMount(() => {
 
 <video 
   class="w-full h-full object-cover"
-  src="/dronvideo.mp4"
+  src="/AseiDataInterna/dronvideo.mp4"
   autoplay
   loop
   muted
