--- a/src/pages/comercial.astro
+++ b/src/pages/comercial.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import './src/styles/global.css';
+import "../styles/global.css";
 ---
 
 <Layout>
